0.1.17

2013-11-05  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed line breaks in source files (UNIX EOL)

0.1.16

2013-10-21  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added code to catch failing malloc/realloc when out of memory

0.1.15

2013-05-28  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* API change: added mimetype parameter to the following functions
			quickmail_list_attachment_callback_fn
			quickmail_add_attachment_file
			quickmail_add_attachment_memory
			quickmail_add_attachment_custom

2013-05-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fix automake to add -DNOCURL when compiling quickmaillight
	* fix autoconf to allow compiling with per-target flags

0.1.14

2013-05-03  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added header line for body: Content-Disposition: inline

2013-04-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* use angle brackets with CURLOPT_MAIL_FROM/CURLOPT_MAIL_RCPT

2013-04-15  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added command line options -u username -w password

0.1.13

2013-04-04  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added man page for application (quickmail.1)

2013-03-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* introduced dual licensing (GPL/commercial) and added License.txt

2013-02-17  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed usage info in command line help (missing -m short help)
	* added version information of libcurl library (and dependancies)
	* undo previous change to use LF instead of CRLF, see RFC 2822

0.1.12

2013-02-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed a memory leak in quickmail_get_data when handling body data
	* use LF instead of CRLF in headers (fixes a specific test case)
	* quickmail program now accepts body from stdin if not supplied
	* quickmail program now checks if at least 1 destination is supplied
